# Hyperion

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
.github/workflows/: build-linux.yml
Source/: CMakeLists.txt
Source/HyperMC/: CMakeLists.txt
Source/HyperMC/include/Core/: Logger.hpp  Player.hpp
Source/HyperMC/include/Network/: Connection.hpp  Server.hpp
Source/HyperMC/include/Packets/: Packet.hpp
Source/HyperMC/include/Packets/PacketsIn/: PacketInHandshake.hpp
Source/HyperMC/include/Utilities/: Prerequisites.hpp  VarInt.hpp  VarLong.hpp
Source/HyperMC/src/: main.cpp
Source/HyperMC/src/Core/: Logger.cpp  Player.cpp
Source/HyperMC/src/Network/: Connection.cpp  Server.cpp
Source/HyperMC/src/Packets/: Packet.cpp
Source/HyperMC/src/Packets/PacketsIn/: PacketInHandshake.cpp
Source/HyperMC/src/Utilities/: VarInt.cpp  VarLong.cpp
src/: main.cpp
src/Hyperion/: Core.h  HyperionServer.cpp  HyperionServer.h
src/Hyperion/HyperNetwork/: Client.cpp  Client.h  Connection.cpp  Connection.h  Packet.h  PacketManager.cpp  PacketManager.h
src/Hyperion/HyperNetwork/HyperHandler/: HandshakePacketHandler.cpp  HandshakePacketHandler.h  LoginPacketHandler.cpp  LoginPacketHandler.h  PacketHandler.h  PlayPacketHandler.cpp  PlayPacketHandler.h  StatusPacketHandler.cpp  StatusPacketHandler.h
src/Hyperion/HyperObjects/: Chat.h  ServerListPing.h
src/Hyperion/HyperPackets/HyperPacketsIn/HyperHandshake/: PacketInHandshake.cpp  PacketInHandshake.h
src/Hyperion/HyperPackets/HyperPacketsIn/HyperLogin/: PacketInLogin.cpp  PacketInLogin.h
src/Hyperion/HyperPackets/HyperPacketsIn/HyperStatus/: PacketInPing.cpp  PacketInPing.h  PacketInRequest.cpp  PacketInRequest.h
src/Hyperion/HyperPackets/HyperPacketsOut/HyperLogin/: PacketOutLoginSuccess.cpp  PacketOutLoginSuccess.h
src/Hyperion/HyperPackets/HyperPacketsOut/HyperPlay/: PacketOutJoinGame.cpp  PacketOutJoinGame.h
src/Hyperion/HyperPackets/HyperPacketsOut/HyperStatus/: PacketOutPong.cpp  PacketOutPong.h  PacketOutResponse.cpp  PacketOutResponse.h
src/Hyperion/HyperUtilities/: FileUtils.cpp  Log.cpp  Log.h  Properties.cpp  Properties.h  Random.h  ThreadSafeQueue.h  Timer.cpp  Timer.h  UUID.cpp  UUID.h  VarInt.cpp  VarInt.h  VarLong.cpp  VarLong.h
src/Hyperion/HyperWorld/: Gamemode.h
src/Hyperion/Network/: Client.cpp  Client.h  Connection.cpp  Connection.h  Packet.h  PacketManager.cpp  PacketManager.h
src/Hyperion/Network/Handler/: HandshakePacketHandler.cpp  HandshakePacketHandler.h  LoginPacketHandler.cpp  LoginPacketHandler.h  PacketHandler.h  PlayPacketHandler.cpp  PlayPacketHandler.h  StatusPacketHandler.cpp  StatusPacketHandler.h
src/Hyperion/Objects/: ServerListPing.h
src/Hyperion/Packets/: Packet.h  PacketManager.cpp  PacketManager.h  PacketManager.hpp
src/Hyperion/Packets/PacketsIn/: PacketInHandshake.cpp  PacketInHandshake.h  PacketInPing.cpp  PacketInPing.h  PacketInRequest.cpp  PacketInRequest.h
src/Hyperion/Packets/PacketsIn/Login/: PacketInLogin.cpp  PacketInLogin.h
src/Hyperion/Packets/PacketsIn/Status/: PacketInPing.h
src/Hyperion/Packets/PacketsOut/: PacketOutPong.cpp  PacketOutPong.h  PacketOutResponse.cpp  PacketOutResponse.h
src/Hyperion/Packets/PacketsOut/Login/: PacketOutLoginSuccess.cpp  PacketOutLoginSuccess.h
src/Hyperion/Packets/PacketsOut/Play/: PacketOutJoinGame.cpp  PacketOutJoinGame.h
src/Hyperion/Packets/PacketsOut/Status/: PacketOutPong.h  PacketOutResponse.cpp  PacketOutResponse.h
src/Hyperion/Utilities/: FileUtils.cpp  FileUtils.h  Log.cpp  Log.h  Properties.cpp  Properties.h  Random.cpp  Random.h  ThreadSafeQueue.h  Timer.cpp  UUID.cpp  UUID.h  VarInt.cpp  VarInt.h  VarLong.cpp  VarLong.h
