#-------------------------------------------------------------------------------------------
# Copyright (c) 2020-2021, SkillerRaptor <skillerraptor@protonmail.com>
#
# SPDX-License-Identifier: MIT
#-------------------------------------------------------------------------------------------

#-------------------------------------------------------------------------------------------
# CMake Info
#-------------------------------------------------------------------------------------------
cmake_minimum_required(VERSION 3.10)

#-------------------------------------------------------------------------------------------
# External
#-------------------------------------------------------------------------------------------
find_package(OpenSSL REQUIRED)
find_package(Threads REQUIRED)

#-------------------------------------------------------------------------------------------
# ThirdParty
#-------------------------------------------------------------------------------------------
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty)

#-------------------------------------------------------------------------------------------
# Flags
#-------------------------------------------------------------------------------------------
if ("${COMPILER}" STREQUAL "Clang")
    set(WARNING_FLAGS -Wall -Wextra -Wpedantic -fms-extensions)
elseif ("${COMPILER}" STREQUAL "GNU")
    set(WARNING_FLAGS -Wall -Wextra -Wpedantic)
elseif ("${COMPILER}" STREQUAL "MSVC")
    set(WARNING_FLAGS /W4)
endif ()

#-------------------------------------------------------------------------------------------
# HyperMC
#-------------------------------------------------------------------------------------------
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/HyperMC)
